--- a/Assets/Options/Settings.json
+++ b/Assets/Options/Settings.json
@@ -3,14 +3,14 @@
     "loadWorld": true,
     "rayTracingOn": true,
     "localLightsOn": false,
-    "AO": 1,
+    "AO": 2,
     "depthOfRecursion": 0,
     "reprojectionOn": true,
-    "varianceOn": true,
-    "filteringOn": false,
+    "varianceOn": false,
+    "filteringOn": true,
     "combineAlbedoAndShadows": false,
-    "StartCoef": 1.0,
-    "AdaptCoef": 0.8302237391471863,
-    "MinCoef": 8.0,
+    "StartCoef": 6.0,
+    "AdaptCoef": 0.05595371872186661,
+    "MinCoef": 9.0,
     "softShadowsOn": true
 }
