--- a/Assets/Options/Settings.json
+++ b/Assets/Options/Settings.json
@@ -1,16 +1,16 @@
 {
-    "dayNightEfect": false,
+    "dayNightEfect": true,
     "loadWorld": true,
     "rayTracingOn": true,
-    "localLightsOn": false,
-    "AO": 2,
-    "depthOfRecursion": 0,
+    "localLightsOn": true,
+    "AO": 0,
+    "depthOfRecursion": 5,
     "reprojectionOn": true,
-    "varianceOn": false,
+    "varianceOn": true,
     "filteringOn": true,
     "combineAlbedoAndShadows": false,
-    "StartCoef": 6.0,
-    "AdaptCoef": 0.05595371872186661,
-    "MinCoef": 9.0,
-    "softShadowsOn": true
+    "StartCoef": 10.0,
+    "AdaptCoef": 5.0,
+    "MinCoef": 10.0,
+    "softShadowsOn": false
 }
