before last changes
before last changes

--- a/Assets/Options/Settings.json
+++ b/Assets/Options/Settings.json
@@ -7,8 +7,8 @@
     "depthOfRecursion": 5,
     "reprojectionOn": true,
     "varianceOn": true,
-    "filteringOn": false,
-    "combineAlbedoAndShadows": false,
+    "filteringOn": true,
+    "combineAlbedoAndShadows": true,
     "StartCoef": 0.11999999731779099,
     "AdaptCoef": 0.11999999731779099,
     "MinCoef": 2.2649240493774416,
